production/namespaces/system/networkpolicies/ingress/cert-manager.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-cert-manager
  namespace: system
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/instance: cert-manager
      app.kubernetes.io/name: cert-manager
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9402
  policyTypes:
  - Ingress
