production/namespaces/system/networkpolicies/ingress/external-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-external-dns
  namespace: system
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/instance: external-dns
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 7979
  policyTypes:
  - Ingress
