production/namespaces/system/networkpolicies/ingress/linkerd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-linkerd
  namespace: system
spec:
  podSelector: 
    matchLabels:
      app: linkerd
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 4100

  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9990
  policyTypes:
  - Ingress
