production/namespaces/system/networkpolicies/ingress/namerd.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-namerd
  namespace: system
spec:
  podSelector: 
    matchLabels:
      app: namerd
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: linkerd
    ports:
    - protocol: TCP
      port: 4100

  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 9991
  policyTypes:
  - Ingress
