production/namespaces/system/networkpolicies/ingress/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-traefik
  namespace: system
spec:
  podSelector: 
    matchLabels:
      app: traefik
  ingress:
  - from:
    # internet
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
          - 10.0.0.0/8
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443

  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 8080
  policyTypes:
  - Ingress
