production/namespaces/system/networkpolicies/ingress/velero.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-velero
  namespace: system
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/instance: velero
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
    ports:
    - protocol: TCP
      port: 8085
  policyTypes:
  - Ingress
